Nav bar linked done

--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Didir Pitha Ghor</title>
+    <link rel="stylesheet" href="styles/blog.css">
     <style>
         label {
             display: block;
@@ -20,6 +21,15 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">index</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="blogs.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
