--- a/table.html
+++ b/table.html
@@ -6,62 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
     <link rel="stylesheet" href="/styles/table.css">
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 
 <body>
-    <h2>Table</h2>
-    <table>
-        <caption>Employee Salary Table</caption>
-        <thead>
-            <th>SL.</th>
-            <th>Fll Nahe</th>
-            <th>Company</th>
-            <th>Designation</th>
-            <th>Salary</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>01</td>
-                <td>Jaynal</td>
-                <td>DSL</td>
-                <td>Junior Programmer</td>
-                <td>35000</td>
-            </tr>
-            <tr>
-                <td>02</td>
-                <td>Gias Uddin</td>
-                <td>SunR Education</td>
-                <td>Assistant Manager</td>
-                <td>40000</td>
-            </tr>
-            <tr>
-                <td>03</td>
-                <td>Parvej</td>
-                <td>ASHA</td>
-                <td>Officer</td>
-                <td>45000</td>
-            </tr>
-            <tr>
-                <td>04</td>
-                <td>Omor Faruk</td>
-                <td>Ibn Sina</td>
-                <td>Manager</td>
-                <td>50000</td>
-            </tr>
-            <tr>
-                <td>05</td>
-                <td>Arif Khan</td>
-                <td>ABC</td>
-                <td>Software Engineer</td>
-                <td>115000</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="4">Total Employee: 5</td>
-            </tr>
-        </tfoot>
-    </table>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Index</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
+                <li><a href="blogs.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Table</h2>
+        <table>
+            <caption>Employee Salary Table</caption>
+            <thead>
+                <th>SL.</th>
+                <th>Fll Name</th>
+                <th>Company</th>
+                <th>Designation</th>
+                <th>Salary</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>01</td>
+                    <td>Jaynal</td>
+                    <td>DSL</td>
+                    <td>Junior Programmer</td>
+                    <td>35000</td>
+                </tr>
+                <tr>
+                    <td>02</td>
+                    <td>Gias Uddin</td>
+                    <td>SunR Education</td>
+                    <td>Assistant Manager</td>
+                    <td>40000</td>
+                </tr>
+                <tr>
+                    <td>03</td>
+                    <td>Parvej</td>
+                    <td>ASHA</td>
+                    <td>Officer</td>
+                    <td>45000</td>
+                </tr>
+                <tr>
+                    <td>04</td>
+                    <td>Omor Faruk</td>
+                    <td>Ibn Sina</td>
+                    <td>Manager</td>
+                    <td>50000</td>
+                </tr>
+                <tr>
+                    <td>05</td>
+                    <td>Arif Khan</td>
+                    <td>ABC</td>
+                    <td>Software Engineer</td>
+                    <td>115000</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">Total Employee: 5</td>
+                </tr>
+            </tfoot>
+        </table>
+    </main>
 </body>
 
 </html>
