--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nav-bar</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="table.html">Table</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
