Nested drop down added

--- a/table.html
+++ b/table.html
@@ -15,7 +15,16 @@
             <ul>
                 <li><a href="index.html">Index</a></li>
                 <li><a href="form.html">Form</a></li>
-                <li><a href="table.html">Table</a></li>
+                <li>
+                    <a href="table.html">Table</a>
+                    <ul class="nest-dropdown">
+                        <li><a href="index.html">Index</a></li>
+                        <li><a href="form.html">Form</a></li>
+                        <li><a href="table.html">Table</a></li>
+                        <li><a href="blogs.html">Blog</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </li>
                 <li><a href="blogs.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
