--- a/form.html
+++ b/form.html
@@ -25,7 +25,16 @@
             <ul>
                 <li><a href="index.html">index</a></li>
                 <li><a href="table.html">Table</a></li>
-                <li><a href="form.html">Form</a></li>
+                <li>
+                    <a href="form.html">Form</a>
+                    <ul class="dropdown">
+                        <li><a href="index.html">index</a></li>
+                        <li><a href="table.html">Table</a></li>
+                        <li><a href="form.html">Form</a></li>
+                        <li><a href="blogs.html">Blog</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </li>
                 <li><a href="blogs.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
