--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li>
+                    <a href="blog.html">Blog</a>
+                    <ul class="dropdown">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="form.html">Form</a></li>
+                        <li><a href="table.html">Table</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </li>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="table.html">Table</a></li>
                 <li><a href="about.html">About</a></li>
